zero2hero files customized to use locally.

--- a/src/zero2hero/zero2hero_0108.ipynb
+++ b/src/zero2hero/zero2hero_0108.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,11 +26,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 x 7 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 638464</td><td>34.1</td><td>1394148</td><td>74.5</td><td>   NA</td><td>1019581</td><td>54.5</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1186706</td><td> 9.1</td><td>8388608</td><td>64.0</td><td>32768</td><td>1852611</td><td>14.2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 x 7 of type dbl\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  638464 & 34.1 & 1394148 & 74.5 &    NA & 1019581 & 54.5\\\\\n",
+       "\tVcells & 1186706 &  9.1 & 8388608 & 64.0 & 32768 & 1852611 & 14.2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 x 7 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| Ncells |  638464 | 34.1 | 1394148 | 74.5 |    NA | 1019581 | 54.5 |\n",
+       "| Vcells | 1186706 |  9.1 | 8388608 | 64.0 | 32768 | 1852611 | 14.2 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) limit (Mb) max used (Mb)\n",
+       "Ncells  638464 34.1 1394148    74.5    NA      1019581  54.5\n",
+       "Vcells 1186706  9.1 8388608    64.0 32768      1852611  14.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -37,14 +86,17 @@
     "library( \"rpart.plot\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\itba2023a\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"/Users/pablonavarro/Documents/ITBA/mcd/materias/2023.1.cuatrimestre/mcd_data_mining/mcd_dm/mcd_dm_trabajos\") # Establezco el Working Directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -54,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,9 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -81,9 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -95,6 +154,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,9 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -113,6 +176,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,9 +185,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -143,6 +210,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
