--- a/src/zero2hero/zero2hero_0110.ipynb
+++ b/src/zero2hero/zero2hero_0110.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,11 +29,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 x 7 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td>2351619</td><td>125.6</td><td>4713005</td><td>251.8</td><td>   NA</td><td>3027929</td><td>161.8</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>3992561</td><td> 30.5</td><td>8388608</td><td> 64.0</td><td>32768</td><td>6259103</td><td> 47.8</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 x 7 of type dbl\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells & 2351619 & 125.6 & 4713005 & 251.8 &    NA & 3027929 & 161.8\\\\\n",
+       "\tVcells & 3992561 &  30.5 & 8388608 &  64.0 & 32768 & 6259103 &  47.8\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 x 7 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| Ncells | 2351619 | 125.6 | 4713005 | 251.8 |    NA | 3027929 | 161.8 |\n",
+       "| Vcells | 3992561 |  30.5 | 8388608 |  64.0 | 32768 | 6259103 |  47.8 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb)  gc trigger (Mb)  limit (Mb) max used (Mb) \n",
+       "Ncells 2351619 125.6 4713005    251.8    NA      3027929  161.8\n",
+       "Vcells 3992561  30.5 8388608     64.0 32768      6259103   47.8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -41,14 +90,17 @@
     "library( \"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\itba2023a\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"/Users/pablonavarro/Documents/ITBA/mcd/materias/2023.1.cuatrimestre/mcd_data_mining/mcd_dm/mcd_dm_trabajos\") # Establezco el Working Directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -58,9 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -69,9 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -80,16 +138,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 x 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 1</td></tr>\n",
+       "\t<tr><td> 3</td></tr>\n",
+       "\t<tr><td> 4</td></tr>\n",
+       "\t<tr><td> 6</td></tr>\n",
+       "\t<tr><td> 7</td></tr>\n",
+       "\t<tr><td>11</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 x 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  1\\\\\n",
+       "\t  3\\\\\n",
+       "\t  4\\\\\n",
+       "\t  6\\\\\n",
+       "\t  7\\\\\n",
+       "\t 11\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 x 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  1 |\n",
+       "|  3 |\n",
+       "|  4 |\n",
+       "|  6 |\n",
+       "|  7 |\n",
+       "| 11 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  1       \n",
+       "[2,]  3       \n",
+       "[3,]  4       \n",
+       "[4,]  6       \n",
+       "[5,]  7       \n",
+       "[6,] 11       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( train_rows )"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,17 +219,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 x 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 1</td></tr>\n",
+       "\t<tr><td> 3</td></tr>\n",
+       "\t<tr><td> 7</td></tr>\n",
+       "\t<tr><td> 9</td></tr>\n",
+       "\t<tr><td>10</td></tr>\n",
+       "\t<tr><td>17</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 x 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  1\\\\\n",
+       "\t  3\\\\\n",
+       "\t  7\\\\\n",
+       "\t  9\\\\\n",
+       "\t 10\\\\\n",
+       "\t 17\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 x 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  1 |\n",
+       "|  3 |\n",
+       "|  7 |\n",
+       "|  9 |\n",
+       "| 10 |\n",
+       "| 17 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  1       \n",
+       "[2,]  3       \n",
+       "[3,]  7       \n",
+       "[4,]  9       \n",
+       "[5,] 10       \n",
+       "[6,] 17       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_rows <- createDataPartition(djulio$clase_ternaria, p= 0.50, list= FALSE)\n",
     "head( train_rows )"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,6 +302,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,6 +310,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,9 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -144,17 +333,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 x 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>2</td></tr>\n",
+       "\t<tr><td>3</td></tr>\n",
+       "\t<tr><td>4</td></tr>\n",
+       "\t<tr><td>7</td></tr>\n",
+       "\t<tr><td>8</td></tr>\n",
+       "\t<tr><td>9</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 x 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t 2\\\\\n",
+       "\t 3\\\\\n",
+       "\t 4\\\\\n",
+       "\t 7\\\\\n",
+       "\t 8\\\\\n",
+       "\t 9\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 x 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "| 2 |\n",
+       "| 3 |\n",
+       "| 4 |\n",
+       "| 7 |\n",
+       "| 8 |\n",
+       "| 9 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,] 2        \n",
+       "[2,] 3        \n",
+       "[3,] 4        \n",
+       "[4,] 7        \n",
+       "[5,] 8        \n",
+       "[6,] 9        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_rows <- createDataPartition(djulio$clase_ternaria, p= 0.50, list= FALSE)\n",
     "head( train_rows )"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,11 +415,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 x 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>2</td></tr>\n",
+       "\t<tr><td>3</td></tr>\n",
+       "\t<tr><td>4</td></tr>\n",
+       "\t<tr><td>7</td></tr>\n",
+       "\t<tr><td>8</td></tr>\n",
+       "\t<tr><td>9</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 x 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t 2\\\\\n",
+       "\t 3\\\\\n",
+       "\t 4\\\\\n",
+       "\t 7\\\\\n",
+       "\t 8\\\\\n",
+       "\t 9\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 x 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "| 2 |\n",
+       "| 3 |\n",
+       "| 4 |\n",
+       "| 7 |\n",
+       "| 8 |\n",
+       "| 9 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,] 2        \n",
+       "[2,] 3        \n",
+       "[3,] 4        \n",
+       "[4,] 7        \n",
+       "[5,] 8        \n",
+       "[6,] 9        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "set.seed(13)  #uso la misma semilla que antes\n",
     "train_rows <- createDataPartition(djulio$clase_ternaria, p= 0.50, list= FALSE)\n",
@@ -175,6 +489,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
