--- a/src/zero2hero/zero2hero_0112.ipynb
+++ b/src/zero2hero/zero2hero_0112.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,11 +26,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 x 7 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 638478</td><td>34.1</td><td>1394148</td><td>74.5</td><td>   NA</td><td>1022791</td><td>54.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1186771</td><td> 9.1</td><td>8388608</td><td>64.0</td><td>32768</td><td>1852611</td><td>14.2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 x 7 of type dbl\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  638478 & 34.1 & 1394148 & 74.5 &    NA & 1022791 & 54.7\\\\\n",
+       "\tVcells & 1186771 &  9.1 & 8388608 & 64.0 & 32768 & 1852611 & 14.2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 x 7 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| Ncells |  638478 | 34.1 | 1394148 | 74.5 |    NA | 1022791 | 54.7 |\n",
+       "| Vcells | 1186771 |  9.1 | 8388608 | 64.0 | 32768 | 1852611 | 14.2 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) limit (Mb) max used (Mb)\n",
+       "Ncells  638478 34.1 1394148    74.5    NA      1022791  54.7\n",
+       "Vcells 1186771  9.1 8388608    64.0 32768      1852611  14.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -38,21 +97,24 @@
     "library(\"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\itba2023a\\\\\") #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"/Users/pablonavarro/Documents/ITBA/mcd/materias/2023.1.cuatrimestre/mcd_data_mining/mcd_dm/mcd_dm_trabajos\") # Establezco el Working Directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
     "GananciaArbol  <-  function( semilla, data, x, train=0.70) {\n",
     "  #establezco la semilla\n",
     "  set.seed(semilla)\n",
-    "  train_rows <- createDataPartition(dataset$clase_ternaria, p= 0.70,list= FALSE)\n",
+    "  train_rows <- createDataPartition(dataset$clase_ternaria, p= train,list= FALSE)\n",
     "  \n",
     "  modelo <-  rpart::rpart(formula= \"clase_ternaria ~ .\" ,\n",
     "                          data= data[ train_rows],  #los datos de training\n",
@@ -70,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,6 +142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -87,9 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,9 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -117,7 +187,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -126,60 +199,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "15618000"
+      ],
+      "text/latex": [
+       "15618000"
+      ],
+      "text/markdown": [
+       "15618000"
+      ],
+      "text/plain": [
+       "[1] 15618000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  11, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "16191000"
+      ],
+      "text/latex": [
+       "16191000"
+      ],
+      "text/markdown": [
+       "16191000"
+      ],
+      "text/plain": [
+       "[1] 16191000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  13, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "14937000"
+      ],
+      "text/latex": [
+       "14937000"
+      ],
+      "text/markdown": [
+       "14937000"
+      ],
+      "text/plain": [
+       "[1] 14937000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  17, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "14670000"
+      ],
+      "text/latex": [
+       "14670000"
+      ],
+      "text/markdown": [
+       "14670000"
+      ],
+      "text/plain": [
+       "[1] 14670000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  19, dataset, x=param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "14688000"
+      ],
+      "text/latex": [
+       "14688000"
+      ],
+      "text/markdown": [
+       "14688000"
+      ],
+      "text/plain": [
+       "[1] 14688000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "GananciaArbol(  23, dataset, x=param)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,6 +371,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
