--- a/src/zero2hero/zero2hero_0114.ipynb
+++ b/src/zero2hero/zero2hero_0114.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,9 +27,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 x 7 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 638477</td><td>34.1</td><td>1394148</td><td>74.5</td><td>   NA</td><td>1022819</td><td>54.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1186766</td><td> 9.1</td><td>8388608</td><td>64.0</td><td>32768</td><td>1852611</td><td>14.2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 x 7 of type dbl\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  638477 & 34.1 & 1394148 & 74.5 &    NA & 1022819 & 54.7\\\\\n",
+       "\tVcells & 1186766 &  9.1 & 8388608 & 64.0 & 32768 & 1852611 & 14.2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 x 7 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| Ncells |  638477 | 34.1 | 1394148 | 74.5 |    NA | 1022819 | 54.7 |\n",
+       "| Vcells | 1186766 |  9.1 | 8388608 | 64.0 | 32768 | 1852611 | 14.2 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) limit (Mb) max used (Mb)\n",
+       "Ncells  638477 34.1 1394148    74.5    NA      1022819  54.7\n",
+       "Vcells 1186766  9.1 8388608    64.0 32768      1852611  14.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -37,10 +97,11 @@
     "library(\"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\itba2023a\\\\\") #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"/Users/pablonavarro/Documents/ITBA/mcd/materias/2023.1.cuatrimestre/mcd_data_mining/mcd_dm/mcd_dm_trabajos\") # Establezco el Working Directory"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,8 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "GananciaArbol  <-  function( semilla, data, x, train=0.70) {\n",
@@ -78,8 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset <- fread(\"./datasets/dataset_pequeno.csv\")   #cargo el dataset #cargo el dataset\n",
@@ -88,8 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#defino unos buenos hiperparametros\n",
@@ -102,7 +175,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#defino el vector de semillas"
@@ -110,17 +187,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "ksemillas  <- c(102191, 200177, 410551, 552581, 892237) #reemplazar por las propias semillas"
+    "ksemillas  <- c(123457, 123401, 123407, 123419, 123427) #reemplazar por las propias semillas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "vector_ganancias  <- c()  #vector donde voy a ir acumulando las ganancias"
@@ -128,8 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "for( semilla in ksemillas)\n",
@@ -140,6 +229,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -148,14 +238,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>57590000</li><li>53310000</li><li>54890000</li><li>55460000</li><li>57060000</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 57590000\n",
+       "\\item 53310000\n",
+       "\\item 54890000\n",
+       "\\item 55460000\n",
+       "\\item 57060000\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 57590000\n",
+       "2. 53310000\n",
+       "3. 54890000\n",
+       "4. 55460000\n",
+       "5. 57060000\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 57590000 53310000 54890000 55460000 57060000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vector_ganancias"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,9 +295,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "55662000"
+      ],
+      "text/latex": [
+       "55662000"
+      ],
+      "text/markdown": [
+       "55662000"
+      ],
+      "text/plain": [
+       "[1] 55662000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mean( vector_ganancias )"
    ]
