--- a/src/zero2hero/zero2hero_0115.ipynb
+++ b/src/zero2hero/zero2hero_0115.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,11 +27,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 x 7 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 638478</td><td>34.1</td><td>1394148</td><td>74.5</td><td>   NA</td><td>1022794</td><td>54.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1186769</td><td> 9.1</td><td>8388608</td><td>64.0</td><td>32768</td><td>1852611</td><td>14.2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 x 7 of type dbl\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  638478 & 34.1 & 1394148 & 74.5 &    NA & 1022794 & 54.7\\\\\n",
+       "\tVcells & 1186769 &  9.1 & 8388608 & 64.0 & 32768 & 1852611 & 14.2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 x 7 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| Ncells |  638478 | 34.1 | 1394148 | 74.5 |    NA | 1022794 | 54.7 |\n",
+       "| Vcells | 1186769 |  9.1 | 8388608 | 64.0 | 32768 | 1852611 | 14.2 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) limit (Mb) max used (Mb)\n",
+       "Ncells  638478 34.1 1394148    74.5    NA      1022794  54.7\n",
+       "Vcells 1186769  9.1 8388608    64.0 32768      1852611  14.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -39,10 +98,11 @@
     "library(\"caret\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\itba2023a\\\\\") #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"/Users/pablonavarro/Documents/ITBA/mcd/materias/2023.1.cuatrimestre/mcd_data_mining/mcd_dm/mcd_dm_trabajos\") # Establezco el Working Directory"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,9 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -83,9 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -104,9 +170,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -116,20 +185,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
-    "ksemillas  <- c(102191, 200177, 410551, 552581, 892237) #reemplazar por las propias semillas"
+    "ksemillas  <- c(123457, 123401, 123407, 123419, 123427) #reemplazar por las propias semillas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -141,6 +216,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,9 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -160,9 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -175,9 +257,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -186,17 +271,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "55662000"
+      ],
+      "text/latex": [
+       "55662000"
+      ],
+      "text/markdown": [
+       "55662000"
+      ],
+      "text/plain": [
+       "[1] 55662000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "53992000"
+      ],
+      "text/latex": [
+       "53992000"
+      ],
+      "text/markdown": [
+       "53992000"
+      ],
+      "text/plain": [
+       "[1] 53992000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ganancia_montecarlo1\n",
     "ganancia_montecarlo2"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
