--- a/src/zero2hero/zero2hero_0109.ipynb
+++ b/src/zero2hero/zero2hero_0109.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,11 +29,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 x 7 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 640143</td><td>34.2</td><td>1394074</td><td>74.5</td><td>   NA</td><td>1309262</td><td>70.0</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1191064</td><td> 9.1</td><td>8388608</td><td>64.0</td><td>32768</td><td>1852636</td><td>14.2</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 x 7 of type dbl\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  640143 & 34.2 & 1394074 & 74.5 &    NA & 1309262 & 70.0\\\\\n",
+       "\tVcells & 1191064 &  9.1 & 8388608 & 64.0 & 32768 & 1852636 & 14.2\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 x 7 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| Ncells |  640143 | 34.2 | 1394074 | 74.5 |    NA | 1309262 | 70.0 |\n",
+       "| Vcells | 1191064 |  9.1 | 8388608 | 64.0 | 32768 | 1852636 | 14.2 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) limit (Mb) max used (Mb)\n",
+       "Ncells  640143 34.2 1394074    74.5    NA      1309262  70.0\n",
+       "Vcells 1191064  9.1 8388608    64.0 32768      1852636  14.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -40,14 +89,17 @@
     "library( \"rpart.plot\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\itba2023a\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\"/Users/pablonavarro/Documents/ITBA/mcd/materias/2023.1.cuatrimestre/mcd_data_mining/mcd_dm/mcd_dm_trabajos\") # Establezco el Working Directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -57,16 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
+    "# install.packages(\"caret\")\n",
     "library(\"caret\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,9 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -92,6 +152,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,16 +161,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 x 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 1</td></tr>\n",
+       "\t<tr><td> 3</td></tr>\n",
+       "\t<tr><td> 6</td></tr>\n",
+       "\t<tr><td> 8</td></tr>\n",
+       "\t<tr><td>13</td></tr>\n",
+       "\t<tr><td>22</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 x 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  1\\\\\n",
+       "\t  3\\\\\n",
+       "\t  6\\\\\n",
+       "\t  8\\\\\n",
+       "\t 13\\\\\n",
+       "\t 22\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 x 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  1 |\n",
+       "|  3 |\n",
+       "|  6 |\n",
+       "|  8 |\n",
+       "| 13 |\n",
+       "| 22 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  1       \n",
+       "[2,]  3       \n",
+       "[3,]  6       \n",
+       "[4,]  8       \n",
+       "[5,] 13       \n",
+       "[6,] 22       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( train_rows )"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,6 +241,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,9 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -135,6 +263,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,9 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -153,6 +285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,11 +294,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "82341"
+      ],
+      "text/latex": [
+       "82341"
+      ],
+      "text/markdown": [
+       "82341"
+      ],
+      "text/plain": [
+       "[1] 82341"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "82341"
+      ],
+      "text/latex": [
+       "82341"
+      ],
+      "text/markdown": [
+       "82341"
+      ],
+      "text/plain": [
+       "[1] 82341"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "164682"
+      ],
+      "text/latex": [
+       "164682"
+      ],
+      "text/markdown": [
+       "164682"
+      ],
+      "text/plain": [
+       "[1] 164682"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "164682"
+      ],
+      "text/latex": [
+       "164682"
+      ],
+      "text/markdown": [
+       "164682"
+      ],
+      "text/plain": [
+       "[1] 164682"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "nrow( dtrain)\n",
     "nrow( dtest )\n",
@@ -174,6 +383,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,11 +392,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 x 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>162336</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  1078</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  1268</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 x 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 162336\\\\\n",
+       "\t BAJA+1   &   1078\\\\\n",
+       "\t BAJA+2   &   1268\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 x 2\n",
+       "\n",
+       "| clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 162336 |\n",
+       "| BAJA+1   |   1078 |\n",
+       "| BAJA+2   |   1268 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N     \n",
+       "1 CONTINUA       162336\n",
+       "2 BAJA+1           1078\n",
+       "3 BAJA+2           1268"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 x 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>81168</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  539</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  634</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 x 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 81168\\\\\n",
+       "\t BAJA+1   &   539\\\\\n",
+       "\t BAJA+2   &   634\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 x 2\n",
+       "\n",
+       "| clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 81168 |\n",
+       "| BAJA+1   |   539 |\n",
+       "| BAJA+2   |   634 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N    \n",
+       "1 CONTINUA       81168\n",
+       "2 BAJA+1           539\n",
+       "3 BAJA+2           634"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 x 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>81168</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  539</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  634</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 x 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 81168\\\\\n",
+       "\t BAJA+1   &   539\\\\\n",
+       "\t BAJA+2   &   634\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 x 2\n",
+       "\n",
+       "| clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 81168 |\n",
+       "| BAJA+1   |   539 |\n",
+       "| BAJA+2   |   634 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N    \n",
+       "1 CONTINUA       81168\n",
+       "2 BAJA+1           539\n",
+       "3 BAJA+2           634"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "djulio[  , .N, clase_ternaria]\n",
     "dtrain[  , .N, clase_ternaria]\n",
@@ -194,6 +552,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
